# BIOJUHO-Projects

./: .coverage  .dn_logs_tmp.txt  .env.example  .gdt_last_run.txt  .gdt_logs_tmp.txt  .gh_runs_tmp.txt  .git_log_tmp.txt  .git_status.txt  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .parse_jobs.py  .pre-commit-config.yaml  .remote_tmp.txt  .schtasks_detail.txt  .schtasks_gdt.txt  AGENTS.md  AUDIENCE_FIRST_SUMMARY.md  CHANGELOG.md  CLAUDE.md  COMMIT_RECORD_2026-03-23.md  COMPREHENSIVE_PROJECT_HEALTH_REPORT.md  CONTEXT.md  CONTRIBUTING.md  ENHANCEMENT_LOG.md  GENAI_INVESTIGATION_REPORT_2026-03-24.md  GITHUB_ISSUES_CHECKLIST.md  HANDOFF.md  LESSONS.md  LICENSE  ONBOARDING.md  QC_REPORT_2026-03-24_SYSTEM_DEBUG.md  QUALITY_GATE.md  QUICK_FIX_INSTRUCTIONS.md  QUICK_START.md  README.md  REFACTORING_PRIORITY_REPORT.md  SECURITY.md  SESSION_REPORT_2026-03-24_WSL_FIX.md  (+100 more)
MCP_notion-antigravity/: .env.example  .gitignore  README.md  RULES.md  add_idea_request.py  add_properties_to_v2.py  admin_dashboard.py  create_db.py  create_db_v2.py  debug_log.txt  devlog.md  init_mock_db.py  inspect_db.py  inspect_db_id.py  inspect_page.py  install.bat  list_pages.py  pyproject.toml  requirements.txt  run_auto_log.bat  run_content_publisher.bat  run_daily_news.bat  run_output.txt  run_server.bat  run_server.sh  run_x_growth.bat  server.py  setup_schedule.ps1  update_db_schema.py  update_db_schema_v2.py
MCP_notion-antigravity/.agent/engine/: pipeline.py
MCP_notion-antigravity/config/: dashboard_config.json  news_sources.json  x_growth_config.json
MCP_notion-antigravity/docs/product/: kpis.md
MCP_notion-antigravity/docs/runbooks/: environment-mapping.md  windows-utf8.md
MCP_notion-antigravity/output/: daily_tweets_2026-02-05.txt  daily_tweets_2026-02-06.txt  daily_tweets_2026-02-06_evening.txt  daily_tweets_2026-02-06_test.txt  latest_report.txt  pipeline_result_20260225_091347.json
MCP_notion-antigravity/output/notebooklm_sources/: 2026-02-07_News_Briefing.md  2026-02-08_News_Briefing.md  2026-02-10_News_Briefing.md  2026-02-11_News_Briefing.md  2026-02-12_News_Briefing.md  2026-02-14_News_Briefing.md  2026-02-15_News_Briefing.md  2026-02-16_News_Briefing.md  2026-02-17_News_Briefing.md  2026-02-19_News_Briefing.md  2026-02-20_News_Briefing.md  2026-02-21_News_Briefing.md  2026-02-22_News_Briefing.md  2026-02-23_News_Briefing.md  2026-02-24_News_Briefing.md  2026-02-25_News_Briefing.md
MCP_notion-antigravity/output/trends/: Trend_Report_2026-02-06.md
MCP_notion-antigravity/prompts/: x_growth_prompt.md
MCP_notion-antigravity/scripts/: brain_module.py  canva_auth_server.py  canva_generator.py  collect_news.py  content_publisher.py  daily_log.py  debug_notion.py  export_to_notebooklm.py  market_data.py  news_bot.py  proofreader.py  run_daily_news.py  runtime.py  settings.py  skill_integrator.py  telegram_notifier.py  token_store.py  trend_analyzer.py  update_dashboard.py  view_db_schema.py  visualization.py
MCP_notion-antigravity/src/antigravity_mcp/: __main__.py  cli.py  config.py  server.py
MCP_notion-antigravity/tests/: conftest.py  manual_add_full_log.py  test_add_empty_v2.py  test_add_extended_log.py  test_add_full_log.py  test_add_task.py  test_add_task_simple.py  test_add_task_v2.py  test_connection.py  test_init_mock_db.py  test_server.py
MCP_notion-antigravity/tests/integration/: test_content_workflow.py
MCP_notion-antigravity/tests/unit/: test_markdown_blocks.py
apps/AgriGuard/backend/: .dockerignore  .env.example  Dockerfile  admin.py  auth.py  database.py  dependencies.py  env_loader.py  iot_service.py  main.py  models.py  mqtt_service.py  pyproject.toml  requirements.txt  schemas.py  seed_db.py  test_api.py
apps/desci-platform/backend/: .dockerignore  .env.example  auth.py  firestore_db.py  limiter.py  main.py  mcp_server.py  models.py  pyproject.toml  requirements.txt  worker.py
apps/desci-platform/biolinker/: .env.example  firestore_db.py  limiter.py  main.py  mcp_server.py  models.py  pyproject.toml  requirements.txt  test_gemini.py
archive/notebooklm-automation/: .env.example  .gitignore  README.md  pyproject.toml
automation/DailyNews/: .dockerignore  .env.example  .gitattributes  CLAUDE.md  Dockerfile  FIX_SUMMARY_2026-03-27.md  PROJECT-STATUS.md  QC_REPORT_2026-03-27.md  QC_REPORT_2026-03-27_MORNING_BRIEF.md  QC_REPORT_2026-03-29_BRIEF_AUTOMATION.md  QC_REPORT_2026-03-31_PIPELINE_STABILIZATION.md  QC_REPORT_2026-04-12_HISTORICAL_REPAIR.md  README.md  admin_dashboard.py  coverage.json  devlog.md  fix_morning_task.ps1  init_mock_db.py  install.bat  pyproject.toml  pytest_errors.txt  requirements.txt  run_auto_log.bat  run_cli.bat  run_daily_news.bat  run_newsletter_publish.bat  run_server.bat  run_x_growth.bat  schema.json  server.py  setup_schedule.ps1  test_output.txt
automation/getdaytrends/: .dockerignore  .env.example  .gitignore  BENCHMARK_2026-03-23.md  DEPLOYMENT.md  Dockerfile  FINAL_SUMMARY_2026-03-23.md  GETDAYTRENDS_COMPLETION_PLAN.md  GetDayTrends_NewTask.xml  GetDayTrends_Task.xml  OPERATIONS.md  QC_LOG.md  README.md  ROADMAP.md  WORKFLOW.md  __init__.py  alerts.py  analyzer.py  canva.py  config.py  config_env_loaders.py  constitution.yaml  content_qa.py  context_collector.py  crawl4ai_adapter.py  dashboard.py  dashboard_html.py  dashboard_routes_tap.py  db.py  db_env.py  db_schema.py  embeddings.py  fact_checker.py  final_tests.txt  final_tests2.txt  final_tests3.txt  firecrawl_bridge.py  firecrawl_client.py  fix_mojibake.py  generator.py  (+45 more)
mcp/telegram-mcp/: .env.example  pyproject.toml  server.py
shared/: config.py  logging.py  pyproject.toml
shared/content/: __init__.py  prompts.py
shared/embeddings/: __init__.py  agentir.py  core.py
shared/fact_check/: __init__.py  claim_extractor.py  credibility.py  verifier.py
shared/llm/: __init__.py  backends.py  bitnet_runner.py  client.py  config.py  language_bridge.py  marl.py  models.py  stats.py
shared/notifications/: notifier.py
shared/telemetry/: __init__.py  sentry_integration.py
shared/test_utils/: __init__.py  fixtures.py
(+2554 files in other folders)
