[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-projects-workspace"
version = "1.0.0"
description = "Multi-project AI workspace: DeSci, AgriGuard, GetDayTrends, DailyNews"
requires-python = ">=3.12"
# Root workspace env is intentionally lean:
# shared/workspace tests run here, while member projects own their runtime deps.
dependencies = [
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<8.4",  # pinned: 8.4+ has capture crash with Python 3.13
    "radon>=6.0",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*", "content_intelligence*"]

[tool.ruff]
target-version = "py312"
line-length = 120
extend-exclude = [
    ".agent",
    ".agents",
    ".claude",
    ".deepeval",
    ".firecrawl",
    ".pytest-root",
    ".pytest-temp",
    ".sessions",
    ".smoke-basetemp",
    ".smoke-tmp",
    ".test-tmp",
    "ai_projects_workspace.egg-info",
    "archive",
    "claude-goal",
    "output",
    "tmp",
    "var",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E402",   # import path/env bootstrap patterns are common in legacy apps/scripts
    "E722",   # broad legacy cleanup is tracked separately
    "E741",   # legacy variable names; avoid noisy broad churn
    "B008",   # do not perform function calls in argument defaults (FastAPI Depends)
    "B017",   # legacy tests intentionally assert broad validation exceptions
    "B904",   # exception chaining cleanup is useful but too broad for this pass
    "B905",   # strict zip migration can alter behavior in old code
    "SIM108", # use ternary operator (sometimes less readable)
    "SIM102", # collapsible-if cleanup is stylistic
    "SIM103", # direct bool returns are stylistic
    "SIM105", # suppress() migration is stylistic
    "SIM110", # generator/builtin rewrite is stylistic
    "SIM115", # context-manager migration can alter file lifetime
    "SIM117", # combining context managers is stylistic
    "SIM201", # readability-only comparison rewrite
    "TC001",  # type-only import migration is optional
    "TC002",  # type-only import migration is optional
    "TC003",  # type-only import migration is optional
    "UP028",  # yield-from migration is stylistic
    "UP042",  # StrEnum migration can change enum behavior
    "UP047",  # PEP 695 migration would reduce compatibility
]

[tool.ruff.lint.isort]
known-first-party = ["shared", "getdaytrends", "content_intelligence"]

[tool.ruff.lint.per-file-ignores]
"automation/DailyNews/src/antigravity_mcp/tooling/ops_tools.py" = ["F401"]
"automation/getdaytrends/core/steps_generate.py" = ["F401"]
"automation/getdaytrends/core/steps_save.py" = ["F401"]
"automation/getdaytrends/dashboard.py" = ["F401"]
"automation/getdaytrends/dashboard_routes_tap.py" = ["F401"]
"automation/getdaytrends/db.py" = ["F401", "F403"]
"automation/getdaytrends/db_layer/__init__.py" = ["F401"]
"automation/getdaytrends/db_schema.py" = ["F401"]
"automation/getdaytrends/generator.py" = ["F401"]
"automation/getdaytrends/news_scraper.py" = ["F401"]
"automation/getdaytrends/storage_content_hub.py" = ["F401"]
"automation/getdaytrends/x_client.py" = ["F401"]
"ops/scripts/prefect_orchestrator.py" = ["F401"]
"packages/shared/harness/adapters/deepagents.py" = ["F401"]
"packages/shared/intelligence/code_graph.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
python_version = "3.12"
# 점진적 모드: 새 코드부터 엄격하게, 기존 코드는 warn만
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
check_untyped_defs = true
ignore_missing_imports = true          # 외부 패키지 stubs 없어도 통과
no_implicit_optional = true
strict_equality = true
# 아직 strict=true 아님 — 단계적 적용
disallow_untyped_defs = false          # Phase 2에서 true로 전환
disallow_any_generics = false          # Phase 3에서 true로 전환

[[tool.mypy.overrides]]
module = "shared.*"
# shared 패키지는 가장 먼저 엄격하게
disallow_untyped_defs = true
disallow_any_generics = true

[[tool.mypy.overrides]]
module = [
    "anthropic.*",
    "google.*",
    "openai.*",
    "loguru.*",
    "notion_client.*",
    "tweepy.*",
    "deepeval.*",
    "crawl4ai.*",
    "firecrawl.*",
    "instructor.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: marks tests that require external service integration",
    "external: marks tests that make real external API calls",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.uv]
# Project lives on D: while UV cache lives on C:, so hardlinking always falls
# back to a full copy and prints a noisy warning on every uv run/uv sync.
# Force copy mode to silence the warning without changing semantics.
link-mode = "copy"

[tool.uv.workspace]
members = [
    "apps/AgriGuard/backend",
    "apps/desci-platform/backend",
    "automation/DailyNews",
    "automation/getdaytrends",
    "mcp/desci-research-mcp",
    "mcp/telegram-mcp",
]
exclude = [
    "mcp/notebooklm-mcp",  # heavily pinned deps conflict with workspace
]
