[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-projects-workspace"
version = "1.0.0"
description = "Multi-project AI workspace: DeSci, AgriGuard, GetDayTrends, DailyNews"
requires-python = ">=3.12"
# Root workspace env is intentionally lean:
# shared/workspace tests run here, while member projects own their runtime deps.
dependencies = [
    "pydantic>=2.0,<3.0",
    "python-dotenv",
    "sqlalchemy>=2.0.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<8.4",  # pinned: 8.4+ has capture crash with Python 3.13
    "radon>=6.0",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*", "content_intelligence*"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults (FastAPI Depends)
    "SIM108", # use ternary operator (sometimes less readable)
]

# desci-platform backend (biolinker) was ported to main as existing, working,
# 109-test-green code. The CI security gate adds S/N to the select; these
# scoped suppressions encode this FastAPI service's accepted patterns. The
# security (S) rules below were each reviewed individually and confirmed safe —
# see apps/desci-platform/QC_LOG.md (2026-06-18).
[tool.ruff.lint.per-file-ignores]
"apps/desci-platform/backend/**" = [
    "S104",  # uvicorn binds 0.0.0.0 inside the container by design
    "S105",  # ALLOW_TEST_BYPASS-gated test sentinel + token-type labels, not secrets
    "S106",  # false positives on token-type / *_message kwargs
    "S110",  # intentional best-effort try/except/pass in non-critical paths
    "S112",  # intentional try/except/continue in scan loops
    "S310",  # URL opens target configured internal services, not user URLs
    "S311",  # random is used for sampling/jitter, never for crypto
    "S314",  # GROBID XML comes from a trusted internal service
    "S324",  # md5/sha1 used for content-addressing / cache keys, not security
    "S603",  # subprocess calls use fixed, non-shell argv lists
    "S608",  # asyncpg queries are parameterized ($N placeholders); values pass via params
    "E402",  # imports after a deliberate sys.path bootstrap
    "E722",  # a few best-effort bare excepts in telemetry/parse paths
    "UP042", # keep str-Enum as-is (serialization parity) in a port
    "B007",  # intentional unused loop vars
    "F841",  # a couple of debug-readability locals
    "N806",  # an occasional non-lowercase local mirroring an external field
    "B008",  # FastAPI Depends()/Query() in defaults (repeated here: CLI --select drops the global ignore)
    "E501",  # line length owned by the formatter (repeated here for the same reason)
    "S101",  # a few production invariant asserts
]
"apps/desci-platform/backend/tests/**" = ["S101", "S105", "S106", "N802", "N803", "F811", "E402", "B008", "E501"]
"apps/desci-platform/scripts/**" = ["S106", "S603", "S110", "S310", "E402", "B008", "E501", "S101"]

[tool.ruff.lint.isort]
known-first-party = ["shared", "getdaytrends", "content_intelligence"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
python_version = "3.12"
# 점진적 모드: 새 코드부터 엄격하게, 기존 코드는 warn만
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
check_untyped_defs = true
ignore_missing_imports = true          # 외부 패키지 stubs 없어도 통과
no_implicit_optional = true
strict_equality = true
# 아직 strict=true 아님 — 단계적 적용
disallow_untyped_defs = false          # Phase 2에서 true로 전환
disallow_any_generics = false          # Phase 3에서 true로 전환

[[tool.mypy.overrides]]
module = "shared.*"
# shared 패키지는 가장 먼저 엄격하게
disallow_untyped_defs = true
disallow_any_generics = true

[[tool.mypy.overrides]]
module = [
    "anthropic.*",
    "google.*",
    "openai.*",
    "loguru.*",
    "notion_client.*",
    "tweepy.*",
    "deepeval.*",
    "crawl4ai.*",
    "firecrawl.*",
    "instructor.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: marks tests that require external service integration",
    "external: marks tests that make real external API calls",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.uv]
# Project lives on D: while UV cache lives on C:, so hardlinking always falls
# back to a full copy and prints a noisy warning on every uv run/uv sync.
# Force copy mode to silence the warning without changing semantics.
link-mode = "copy"

[tool.uv.workspace]
members = [
    "apps/AgriGuard/backend",
    "apps/desci-platform/backend",
    "apps/desci-platform/biolinker",
    "automation/DailyNews",
    "automation/getdaytrends",
    "mcp/desci-research-mcp",
    "mcp/telegram-mcp",
]
exclude = [
    "mcp/notebooklm-mcp",  # heavily pinned deps conflict with workspace
]
