[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "antigravity-content-engine"
version = "0.1.0"
description = "Notion-native AI content engine with MCP, pipelines, and operations tooling."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "anthropic>=0.40.0,<1.0",
  "feedparser>=6.0.0,<7.0",
  "google-genai>=1.0.0,<2.0",
  "httpx>=0.27.0,<1.0",
  "mcp>=1.0.0,<2.0",
  "notion-client>=2.2.1,<3.0",
  "openai>=1.0.0,<2.0",
  "python-dateutil>=2.9.0,<3.0",
  "python-dotenv>=1.0.0",
  "tenacity>=8.0.0,<10.0",
]

[project.optional-dependencies]
dashboard = [
  "pandas",
  "plotly",
  "streamlit",
]
market = [
  "yfinance",
]
social = [
  "tweepy",
]
viz = [
  "matplotlib",
  "numpy",
  "Pillow",
  "seaborn",
  "wordcloud",
]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "pytest-cov>=7.0",
  "respx>=0.21.0",
]

[project.scripts]
antigravity-mcp = "antigravity_mcp.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "-m \"not integration\" --ignore-glob=\"**/manual/*\""
markers = [
  "integration: tests requiring local services, live DB, or credentials",
  "external: tests that call external APIs",
]
filterwarnings = [
  "ignore:'_UnionGenericAlias' is deprecated and slated for removal in Python 3.17:DeprecationWarning:google\\.genai\\.types",
]

[tool.coverage.run]
source = ["src/antigravity_mcp"]
omit = [
  "tests/*",
  "*/manual/*",
  "*/__pycache__/*",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
