[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DailyNews"
version = "0.1.0"
description = "Part of ai-projects workspace"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.0",
    "notion-client>=2.2.1,<3.0",
    "mcp>=1.0.0,<2.0",
    "feedparser>=6.0.0,<7.0",
    "httpx>=0.27.0,<1.0",
    "python-dateutil>=2.9.0,<3.0",
    "google-genai>=1.0.0,<2.0",
    "anthropic>=0.40.0,<1.0",
    "openai>=1.0.0,<3.0",
    "tenacity>=8.0.0,<10.0",
    "matplotlib>=3.8.0,<4.0",
    "sqlalchemy>=2.0.0,<3.0",  # shared.llm.stats uses SQLAlchemy for cost tracking
    "aiosqlite>=0.19.0,<1.0",  # signal_collector reads GetDayTrends SQLite DB async
    "fastapi>=0.110.0,<1.0",  # newsletter subscribe/unsubscribe + signals endpoints
]

[project.optional-dependencies]
newsletter = [
    "resend>=2.0.0",
    "jinja2>=3.1.0",
]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23.0,<1.0",
    "respx>=0.22.0,<1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
norecursedirs = [
    ".pytest-temp",
    ".test-tmp",
    ".venv",
    "__pycache__",
    "node_modules",
]
markers = [
    "integration: marks tests that require live environment (DB, files, services)",
    "flaky: marks tests that may intermittently fail",
]
