[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "getdaytrends"
version = "0.1.0"
description = "Part of ai-projects workspace"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.102.0,<1.0",
    "requests>=2.34.2,<3.0",
    "beautifulsoup4>=4.12.3,<5.0",
    "lxml>=6.1.1,<7.0",
    "schedule>=1.2.2,<2.0",
    "python-dotenv>=1.0.0,<2.0",
    "notion-client>=2.2.1,<4.0",
    "gspread>=6.0.0,<7.0",
    "google-auth>=2.53.0,<3.0",
    "colorama>=0.4.6,<1.0",
    "aiohttp>=3.10.0,<4.0",
    "google-genai>=2.5.0,<3.0",
    "fastapi>=0.115.0,<1.0",
    "uvicorn[standard]>=0.47.0,<1.0",
    "httpx>=0.27.0,<1.0",
    "asyncpg>=0.29.0,<1.0",
    "selectolax>=0.4.7,<1.0",
    "twikit>=2.3.0,<3.0",
    "instructor>=1.14.5",
    "jsonref>=1.1.0,<2.0",
    "deepeval>=4.0.2",
    "scrapling>=0.4.0",
    "prometheus_client>=0.21.0",
    "loguru>=0.7.3,<1.0",
    "aiosqlite>=0.20.0,<1.0",
    "redis>=5.0.0,<8.0",
    "cryptography>=48.0.0,<49.0",
    "psycopg2-binary>=2.9.0,<3.0",
    "sqlalchemy>=2.0.0,<3.0",
]

[tool.setuptools]
packages = [
    "getdaytrends",
    "getdaytrends.analysis",
    "getdaytrends.collectors",
    "getdaytrends.core",
    "getdaytrends.db_layer",
    "getdaytrends.edape",
    "getdaytrends.generation",
    "getdaytrends.pipeline",
    "getdaytrends.tap",
]

[tool.setuptools.package-dir]
getdaytrends = "."

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<8.4",  # pinned: 8.4+ capture crash with Python 3.13
    "pytest-asyncio>=0.23.0,<1.0",
    "respx>=0.21.0,<1.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.15.8,<1.0",
]
