[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biolinker"
version = "0.1.0"
description = "Part of ai-projects workspace"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<1.0",
    "uvicorn>=0.32.0,<1.0",
    "python-dotenv>=1.0.0",
    "firebase-admin>=6.1.0,<7.0",
    "langchain>=0.3.0,<1.0",
    "langchain-openai>=0.3.0,<1.0",
    "langchain-google-genai>=2.0.0,<3.0",
    "chromadb>=0.5.0,<1.0",
    "qdrant-client>=1.9.1,<2.0",
    "pydantic>=2.0.0,<3.0",
    "pydantic-settings>=2.0.0,<3.0",
    "structlog>=24.0.0,<26.0",
    "aiohttp>=3.10.0,<4.0",
    "beautifulsoup4>=4.12.0",
    "python-multipart>=0.0.9",
    "web3>=7.0.0,<8.0",
    "pypdf>=4.0.0,<7.0",
    "numpy>=1.26.0,<3.0",
    "apscheduler>=3.10.0,<4.0",
    "duckduckgo-search>=6.0.0,<8.0",
    "youtube-transcript-api>=1.0.0,<2.0",
    "pytest>=8.3,<8.4",  # pinned: 8.4+ capture crash with Python 3.13
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "slowapi>=0.1.9,<1.0",
    "stripe>=9.0.0,<12.0",
    "prometheus_client>=0.21.0",
]

[tool.setuptools]
packages = ["routers", "services", "services.crawlers"]
py-modules = ["firestore_db", "limiter", "main", "mcp_server", "models"]
